--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "antd": "^5.19.4",
     "axios": "^1.7.3",
+    "date-fns": "^3.6.0",
     "flowbite-react": "^0.10.1",
     "frontend": "file:",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
